force-app/main/default/objects/Medical_Insurance__c/fields/Date_of_conclusion__c.field-meta.xml
<CustomField>
    <fullName>Date_of_conclusion__c</fullName>
    <description>The date of which the contract is valid</description>
    <label>Date of conclusion</label>
    <type>Date</type>
</CustomField>