force-app/main/default/objects/Medical_Insurance__c/fields/Insurance_Amount__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Amount__c</fullName>
    <description>Amount in PLN</description>
    <label>Insurance Amount</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>