force-app/main/default/objects/Medical_Insurance__c/fields/Insurance_Number__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Number__c</fullName>
    <description>Insurance identification number</description>
    <label>Insurance Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>