force-app/main/default/objects/Medical_Insurance__c/fields/Medical_Facility__c.field-meta.xml
<CustomField>
    <fullName>Medical_Facility__c</fullName>
    <description>Facilities that covers our insurance.</description>
    <label>Medical Facility</label>
    <referenceTo>Medical_Facility__c</referenceTo>
    <relationshipLabel>Medical_Insurances</relationshipLabel>
    <relationshipName>Medical_Insurances</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>